webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
#  副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
#  描述的是 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook
#  POD 里面具体信息
    spec:
      containers:
        - name: webook
          image: coconut/webook:v0.0.1
          ports:
            - containerPort: 8080
