webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
      port: 13316
      targetPort: 3306
      nodePort: 30001
  type: NodePort
