webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 6380
#      redis 默认端口
      targetPort: 6379
      nodePort: 30002
  type: NodePort
