webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-live-ingress
spec:
  ingressClassName: nginx
#  转发规则
  rules:
#    - host 是 live.webook.com 的时候，命中这一条
    - host: live.webook.com
      http:
        paths:
#          - 请求路径前缀是 / 时，流量转发到 webook 服务上
#          - 端口是 81
          - backend:
              service:
                name: webook
                port:
                  number: 81
            pathType: Prefix
            path: /
